# mcp-nexus

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mcp_nexus/: __init__.py  __main__.py  catalog.py  config.py  gateway.py  jobs.py  landing.py  public_proxy.py  python_execution.py  python_sandbox.py  registry.py  results.py  runtime.py  scaffold.py  server.py  state.py  task_routing.py  telemetry.py  tool_resolution.py
mcp_nexus/auth/: oauth.py
mcp_nexus/health/: watchdog.py
mcp_nexus/intelligence/: __init__.py  learning.py  memory.py
mcp_nexus/middleware/: audit.py  rate_limit.py
mcp_nexus/tools/: __init__.py  analysis.py  database.py  debug.py  deploy.py  filesystem.py  git.py  intelligence.py  logs.py  monitor.py  network.py  packages.py  process.py  terminal.py
mcp_nexus/transport/: ssh.py
scripts/: deploy-to-server.sh  install.sh
tests/: test_audit.py  test_config.py  test_deep_tools.py  test_intelligence.py  test_jobs.py  test_network_tools.py  test_oauth.py  test_public_proxy.py  test_python_execution.py  test_rate_limit.py  test_registry.py  test_results.py  test_runtime.py  test_scaffold.py  test_server_middleware.py  test_ssh.py  test_task_routing.py
